# LatticeVision

./: .RData  .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
.meta/: lmcat.txt
.meta/requirements/: requirements-all.txt
R_data_generation/: CESM_ensemble_sim.R  LKrig.sim.mercator.R  cnn_datasim_aniso.R  helper_funcs.R  stun_datasim_clim_aniso.R
R_scripts/: cesm_ensemble_sim.R  clim_ensemble_sim.R  cnn_datagen.R  helper_funcs.R  i2i_datagen.R  required_packages.R
latticevision/: device.py  img_augment.py  plotting.py  seed.py
latticevision/cnn/: dataset.py  eval.py  model.py  train.py
latticevision/img2img/: __init__.py  base.py  dataset.py  eval.py  train.py
latticevision/img2img/models/: stun.py  unet.py  vit.py
notebooks/: cesm_application.ipynb  clim_application.ipynb  clim_data_processing.ipynb  cnn_demo.ipynb  cnn_trainloop.py  exploring_CESM.ipynb  i2i_demo.ipynb  i2i_trainloop.py  misc_figures.ipynb
tests/: test_cnn_integration.py  test_i2i_integration.py  test_stun_integration.py
tests/unit/: test_integration_pieces.py
